--- a/Java script/js-projects/chromeExtension/manifest.json
+++ b/Java script/js-projects/chromeExtension/manifest.json
@@ -1,10 +1,14 @@
 
 {
     "manifest_version" : 3,
-    "version" : "1.1",
+    "version" : "1.2",
     "name" : "Money tracker",
     "action" : {
         "default_popup" : "index.html",
         "default_icon"  : "icon.png"
-    }
+    },
+    "permissions" : [
+        "tabs"
+    ]
+    
 }
